2004-09-02  A Balamurugan  <bala.a@californiadigital.com>

	* fish/extensions/bc-lan-conf-auth-section.scm: added code to
	support empty values.
	* fish/extensions/bc-lan-conf-misc-section.scm: like wise
	* fish/extensions/bc-lan-conf-section.scm: like wise
	* fish/extensions/bc-lan-serial-channel-section.scm: like wise
	* fish/extensions/bc-misc-section.scm: like wise
	* fish/extensions/bc-section.scm: like wise
	* fish/extensions/bc-serial-conf-section.scm: like wise
	* fish/extensions/bc-user-section.scm: like wise
	* fish/extensions/utils.scm: (simple->string) primitive procedure
	supports list.
	* fish/src/scm-procedures.c: fixed bug toggling user input in
	ex_set_bmc_lan_channel_volatile_access(),
	ex_set_bmc_lan_channel_non_volatile_access(),
	ex_set_bmc_serial_channel_volatile_access() and
	ex_set_bmc_serial_channel_non_volatile_access()

2004-08-24  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-sensor-cmds.c
	(ipmi_kcs_get_sensor_thresholds): Fix typo.

2004-08-23  Albert Chu  <chu11@llnl.gov>

	* bmc-watchdog/src/bmc-watchdog.c (_bmclog): Fix typo.
	
2004-08-20  A Balamurugan  <bala.a@californiadigital.com>

	* fish/extensions/bc-common.scm: added new primitive procedure
	(get-doc-string)
	* fish/extensions/bc-lan-conf-auth-section.scm: added doc string
	* fish/extensions/bc-lan-conf-misc-section.scm: like wise
	* fish/extensions/bc-lan-conf-section.scm: like wise
	* fish/extensions/bc-lan-serial-channel-section.scm: like wise
	* fish/extensions/bc-misc-section.scm: like wise 
	* fish/extensions/bc-section.scm: like wise
	* fish/extensions/bc-serial-conf-section.scm: like wise
	* fish/extensions/bc-user-section.scm: like wise

2004-08-20  Anand Babu  <ab@gnu.org.in>

	* CVS tagged as release-0_1_0_alpha6-tag
	
2004-08-20  A Balamurugan  <bala.a@californiadigital.com>

	* doc/sel.1: added examples

2004-08-20  Anand Babu  <ab@gnu.org.in>

	* fish/extensions/sel.scm (sel-main): fixed bug in parsing