@@ -1,3 +1,11 @@
+2004-09-07  A Balamurugan  <bala.a@californiadigital.com>
+
+	* fish/extensions/utils.scm: renamed (simple->string) to (any->string)
+	* fish/extensions/bc-lan-conf-misc-section.scm: like wise
+	* fish/extensions/bc-section.scm: like wise
+	* fish/extensions/bc-serial-conf-section.scm: like wise
+	* fish/extensions/bc-user-section.scm: like wise
+
 2004-09-02  A Balamurugan  <bala.a@californiadigital.com>
 
 	* fish/extensions/bc-lan-conf-auth-section.scm: added code to
